use new LIBTBX_SET_DISPATCHER_NAME feature to generate phenix.xxx commands; all references to renamed commands updated; uniform run(args, command_name) interfaces; fix file name handling in cns_as_mtz.py

--- a/cctbx/cctbx/web/emma.html
+++ b/cctbx/cctbx/web/emma.html
@@ -23,7 +23,7 @@ Related programs:
 <a href="http://www.solve.lanl.gov/">Solve</a>
 <p>
 Note: It may be much more convenient to use the comamnd-line interface.
-Look for <strong><tt>iotbx.emma</tt></strong> in this document:
+Look for <strong><tt>phenix.emma</tt></strong> in this document:
 
 <a
 href="http://www.phenix-online.org/download/documentation/cci_apps/hyss/examples.html"
