--- a/cctbx/cctbx/web/index.html
+++ b/cctbx/cctbx/web/index.html
@@ -56,7 +56,7 @@
 
 <hr>
 The source code for all examples is in the
-<a href="http://cvs.sourceforge.net/cgi-bin/viewcvs.cgi/cctbx/cctbx/cctbx/web/"
+<a href="http://cctbx.svn.sourceforge.net/viewvc/cctbx/trunk/cctbx/cctbx/web/"
 >cctbx/cctbx/web</a> directory.
 <p>
 Documentation is available
