overlooked path name adjustments due to cctbx directory structure re-organization

--- a/cctbx/web/index.html
+++ b/cctbx/web/index.html
@@ -56,8 +56,8 @@
 
 <hr>
 The source code for all examples is in the
-<a href="http://cctbx.svn.sourceforge.net/viewvc/cctbx/trunk/cctbx/cctbx/web/"
->cctbx/cctbx/web</a> directory.
+<a href="http://cctbx.svn.sourceforge.net/viewvc/cctbx/trunk/cctbx/web/"
+>cctbx/web</a> directory.
 <p>
 Documentation is available
 <a href="http://cctbx.sourceforge.net/">here</a>.
